--- a/portal/index.html
+++ b/portal/index.html
@@ -109,6 +109,15 @@
             0%, 100% { opacity: 1; transform: scale(1); }
             50% { opacity: .8; transform: scale(1.1); }
         }
+        
+        /* Sortable table headers */
+        .cursor-pointer {
+            cursor: pointer;
+            user-select: none;
+        }
+        .cursor-pointer:hover {
+            background-color: rgba(0, 0, 0, 0.02);
+        }
     </style>
 </head>
 <body class="unauthenticated">
