--- a/portal/index.html
+++ b/portal/index.html
@@ -363,7 +363,7 @@
                 // Load pages in parallel
                 await Promise.all([
                     loadModule('./js/pages/login.js'),
-                    loadModule('./js/pages/dashboard-v2.js'),
+                    loadModule('./js/pages/dashboard.js'),
                     loadModule('./js/pages/devices.js'),
                     loadModule('./js/pages/analyst.js'),
                     loadModule('./js/pages/posture.js'),
