--- a/portal/index.html
+++ b/portal/index.html
@@ -119,6 +119,7 @@
         /* Sortable table headers */
         .cursor-pointer {
             cursor: pointer;
+            -webkit-user-select: none;
             user-select: none;
         }
         .cursor-pointer:hover {
@@ -193,9 +194,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#!/posture">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><polyline points="3 12 12 3 21 12 12 21 3 12" /></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3a12 12 0 0 0 8.5 3a12 12 0 0 1 -8.5 15a12 12 0 0 1 -8.5 -15a12 12 0 0 0 8.5 -3" /></svg>
                                     </span>
-                                    <span class="nav-link-title">Security Posture</span>
+                                    <span class="nav-link-title">Posture Snapshot</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#!/posture-ai">
+                                    <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><circle cx="12" cy="12" r="9" /><path d="M14.5 9a3.5 4 0 1 0 0 6" /></svg>
+                                    </span>
+                                    <span class="nav-link-title">AI Posture</span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -371,7 +380,7 @@
                 ]);
                 
                 // Load app last
-                await loadModule('./js/app.js');
+                await loadModule('./js/app.js?v=20260111a');
                 console.log('[App] All modules loaded successfully');
             } catch (error) {
                 console.error('[App] Module loading failed:', error);
