--- a/portal/index.html
+++ b/portal/index.html
@@ -380,7 +380,7 @@
                 ]);
                 
                 // Load app last
-                await loadModule('./js/app.js?v=20260111a');
+                await loadModule('./js/app.js');
                 console.log('[App] All modules loaded successfully');
             } catch (error) {
                 console.error('[App] Module loading failed:', error);
