--- a/terms.html
+++ b/terms.html
@@ -369,11 +369,9 @@
                             <h3>2. Paid Subscriptions</h3>
                             <p>After the trial period, continued access to full functionality requires a paid subscription:</p>
                             <ul>
-                                <li><strong>Personal & Family Plan:</strong> $4.99 per year (introductory price, down from $9.99) - covers unlimited family devices</li>
-                                <li><strong>Schools & Startups Plan:</strong> $1.99 per user per year (introductory price, down from $3.99) - ideal for small organizations</li>
-                                <li><strong>Enterprise/Managed Services:</strong> Custom pricing based on organization size and requirements</li>
+                                <li><strong>Personal & Family Plan:</strong> $4.99 per year - covers up to 5 devices</li>
+                                <li><strong>Business Plan:</strong> $1.99 per user-device per month - ideal for organizations needing more than 5 devices</li>
                             </ul>
-
                             <h3>3. Payment Processing</h3>
                             <p>
                                 Payments are processed securely through trusted payment providers. We do not store 
