--- a/portal/index.html
+++ b/portal/index.html
@@ -12,6 +12,8 @@
     <!-- These load unconditionally but check avoids double-loading in production -->
     <link href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta20/dist/css/tabler.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-GgnF119bh9fxkKuWHRQYSgEe1rSp5jB0EJ2W8eMf8mjowfwhZP2H1u8n8xJUW3FQ">
     <link href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2.47.0/tabler-icons.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-PwEnNZvp50/uDLtKrd1s2D4Xe/y+fCVtEigigjik/PgHlDXUF1uJ32m7guk/XWYV">
+    <!-- MagenSec Custom Styles - Tabler Extensions -->
+    <link href="portal.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/preact@10.19.3/dist/preact.umd.js" crossorigin="anonymous" integrity="sha384-U4OMVsjjX51xPGffCeL/sA3lRY9728Yr9c2GrxjjKXCqLDmTU3YTMoEo7S3w0zV0"></script>
     <script src="https://cdn.jsdelivr.net/npm/preact@10.19.3/hooks/dist/hooks.umd.js" crossorigin="anonymous" integrity="sha384-dotES0HQfWapSbwVniIh09lILVkW8rHjyp+eRlkP7zfcos3bwARWTh85LJRYp+K2"></script>
     <script src="https://cdn.jsdelivr.net/npm/htm@3.1.1/dist/htm.umd.js" crossorigin="anonymous" integrity="sha384-toVdrLSMaw7Y55MowcKqkmFL/Ek6Sky62NOk0b5sDDZBu2wcoPyyQUt9unDVjXhL"></script>
