--- a/portal/index.html
+++ b/portal/index.html
@@ -266,6 +266,10 @@
                                     <span class="nav-link-title">Security</span>
                                 </a>
                                 <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#!/unified-dashboard">
+                                        <span class="me-2">👥</span>Persona Dashboard <span class="badge bg-primary-lt ms-auto">New</span>
+                                    </a>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item disabled" href="#">
                                         <span class="me-2">📊</span>Overview <span class="badge bg-muted-lt ms-auto">Coming Soon</span>
                                     </a>
