--- a/portal/index.html
+++ b/portal/index.html
@@ -223,6 +223,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a href="#!/account" class="dropdown-item">Account</a>
+                            <a href="#!/docs" class="dropdown-item">Help Center</a>
                             <div class="dropdown-divider"></div>
                             
                             <!-- Theme Switcher -->
