update with glass UI

--- a/portal/index.html
+++ b/portal/index.html
@@ -309,11 +309,6 @@
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="#!/settings">General</a>
                                     <a class="dropdown-item" href="#!/audit">Audit Log</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#!/review">
-                                        <span class="badge bg-yellow text-white float-end">Internal</span>
-                                        Review
-                                    </a>
                                 </div>
                             </li>
 
@@ -337,6 +332,11 @@
                                     </a>
                                     <a class="dropdown-item" href="#!/siteadmin/preview">
                                         <span class="me-2">👁️</span>Preview
+                                    </a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#!/siteadmin/review">
+                                        <span class="badge bg-yellow text-white float-end">Internal</span>
+                                        Review
                                     </a>
                                 </div>
                             </li>
