Phone number for whatsapp

--- a/portal/index.html
+++ b/portal/index.html
@@ -346,7 +346,14 @@
                 </div>
             </div>
         </div>
-        
+
+        <!-- Org Status Banner (shown/hidden by orgContext.js) -->
+        <div id="org-status-banner" style="display:none;">
+            <div class="container-xl mt-2">
+                <div id="org-status-alert" role="alert"></div>
+            </div>
+        </div>
+
         <!-- Page wrapper with boxed layout -->
         <div class="page-wrapper">
             <div class="container-xl">
