Response Command flow

--- a/portal/index.html
+++ b/portal/index.html
@@ -260,13 +260,17 @@
                             </li>
 
                             <!-- Security -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="#!/security">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3a12 12 0 0 0 8.5 3a12 12 0 0 1 -8.5 15a12 12 0 0 1 -8.5 -15a12 12 0 0 0 8.5 -3" /></svg>
                                     </span>
                                     <span class="nav-link-title">Security</span>
                                 </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#!/security">Dashboard</a>
+                                    <a class="dropdown-item" href="#!/security/response">Response</a>
+                                </div>
                             </li>
 
                             <!-- Compliance -->
