Client Device page

--- a/portal/index.html
+++ b/portal/index.html
@@ -339,7 +339,7 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#!/siteadmin/review">
                                         <span class="badge bg-yellow text-white float-end">Internal</span>
-                                        Review
+                                        MagenSec Hub
                                     </a>
                                 </div>
                             </li>
